# diefastdiehard

./: .gitignore  .gitmodules  CMakeLists.txt  build-plz  coro_test.cpp  diefastdiehard.cpp  fs.cfg  gui_test.cpp
.github/workflows/: ubuntu-22.04.yml  ubuntu-latest.yml
data/: defines.cfg  levels.cfg  player_controls.cfg  weapons.cfg
data/scripts/: .luarc.json  dfdh.lua  dfdh_ai.lua
data/settings/: player_controls0.cfg  player_controls1.cfg  player_settings0.cfg
src/: adjustment_box.hpp  ai.hpp  ai_types.hpp  anim_point.hpp  args_view.hpp  avg_counter.hpp  bullet.hpp  cfg.hpp  cfg_value_control.hpp  client_sync_state.hpp  command_buffer.hpp  config.hpp  devconsole.hpp  engine.hpp  event_type_generator.cpp  fixed_string.hpp  flags.hpp  game_commands.hpp  game_state.hpp  instant_kick.hpp  io_tools.hpp  key_generator.cpp  level.hpp  log.hpp  lua.hpp  lua_init.hpp  main_menu.hpp  net2_transaction.hpp  net_action_socket.hpp  net_actions.hpp  net_actions_generated.hpp  net_actions_generator.cpp  net_actor.hpp  net_basic.hpp  net_easysocket.hpp  net_tasks.hpp  net_transcontrol.hpp  network_act_socket.hpp  network_actions.hpp  network_sender.hpp  (+31 more)
src/base/: args_view.hpp  avg_counter.hpp  cfg.hpp  cfg_value_control.hpp  color.hpp  coroutine.hpp  errc.hpp  fiber_pool.hpp  finalizers.hpp  fixed_string.hpp  flags.hpp  hash_functions.hpp  io.hpp  log.hpp  md5.hpp  profiler.hpp  range.hpp  ring_buffer.hpp  scope_guard.hpp  serialization.hpp  signals.hpp  split_view.hpp  string_invoker.hpp  tasks.hpp  (+3 more)
tests/: cfg_test.cpp  net_tests.cpp  tasks.cpp
tools/: hpp_depinfo.cpp
(+35 files in other folders)
